
** VC and related modes

*** When using C-x v v or C-x v i on a unregistered file that is in a
directory not controlled by any VCS, ask the user what VC backend to
use to create a repository, create a new repository and register the
file.

*** FIXME: add info about the new VC functions: vc-root-diff and
vc-root-print-log once they stabilize.

*** vc-annotate supports annotations through file copies and renames,
it displays the old names for the files and it can show logs/diffs for
the corresponding lines.  Currently only Git and Mercurial take
advantage of this feature.

*** When a file is not found, VC will not try to check it out of RCS anymore.

*** vc-git changes

**** The new variable vc-git-add-signoff can be used to add a
Signed-off-by line when committing.

**** Support for operating with stashes has been added to vc-dir: the stash list is
displayed in the *vc-dir* header, stashes can be created, removed and
their content displayed.

**** vc-dir displays the stash status

*** log-edit-strip-single-file-name controls whether or not single filenames
are stripped when copying text from the ChangeLog to the *VC-Log* buffer.

** Elint

---
*** Elint now uses compilation-mode.

---
*** Elint can now scan individual files and whole directories,
and can be run in batch mode.

---
*** Elint does a more thorough initialization, and recognizes more built-in
functions and variables.  Customize `elint-scan-preloaded' if you want
to sacrifice some accuracy for a faster startup.

---
*** Elint attempts some basic understanding of featurep and (f)boundp tests.

---
*** Customize `elint-ignored-warnings' to suppress some warnings.

** Miscellaneous

*** The new command `async-shell-command' bound globally to `M-&' executes
the command asynchronously without the need to manually add ampersand to
the end of the command.  Its output appears in the buffer `*Async Shell
Command*'.

+++
*** Autorevert Tail mode now works now for remote files.

