@@ -1,3 +1,15 @@
+2009-11-16  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el	(vc-log-show-limit): Default to 2000.
+	(vc-print-log-internal): Insert buttons to request more entries
+	when limiting the output.
+
+	* vc-sccs.el (vc-sccs-print-log):
+	* vc-rcs.el (vc-rcs-print-log):
+	* vc-cvs.el (vc-cvs-print-log):
+	* vc-git.el (vc-git-print-log): Return 'limit-unsupported when
+	LIMIT is non-nil.
+
 2009-11-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp-gvfs.el (tramp-gvfs-dbus-event-error): Raise only an
